validatingPower removed
